--- a/Inhalt/04_Inhalt/content_dataset_selection.tex
+++ b/Inhalt/04_Inhalt/content_dataset_selection.tex
@@ -1,6 +1,6 @@
 \chapter{Dataset selection}
 \section{Choosing a Dataset}
-	The dataset is the fundament of a data-science project. The quality, size, and closeness to reality decide the helpfulness of findings made using the data.
+	The dataset is the foundation of a data-science project. The quality, size, and closeness to reality decide the helpfulness of findings made using the data.
 	In this section, a classification for data-science projects is introduced as a guide for dataset selection.
 	
 	\subsection{Project Types}
@@ -25,9 +25,9 @@
 	\end{tabular}
 \end{table}
 
-	The problem-first project type is characterized by a predefined problem statement or research goal. The underlying question is how a specific problem can be solved \cite{dataScienceProjectTypes}.  For the selection of the dataset, this requires that goal achievement can be measured with existing ground truth. In some cases, also other methods such as expert judgements can be sufficient. In a problem-first project different datasets can and should be considered. \cite{dataScienceProjectTypes} give the metaphor of "mining for valuable minerals or metals at a given geographic location where the existence of the minerals or metals has been established". This means that it is already verified that the business goal can be reached with this specific dataset, hence the metaphor of already discovered mineral occurrence.
+	The problem-first project type is characterized by a predefined problem statement or research goal. The underlying question is how a specific problem can be solved \cite{dataScienceProjectTypes}.  For the selection of the dataset, this requires that goal achievement can be measured with existing ground truth. In some cases, also other methods such as expert judgments can be sufficient. In a problem-first project different datasets can and should be considered. \cite{dataScienceProjectTypes} give the metaphor of "mining for valuable minerals or metals at a given geographic location where the existence of the minerals or metals has been established". This means that it is already verified that the business goal can be reached with this specific dataset, hence the metaphor of already discovered mineral occurrence.
 	
-	The complementary project type is the data-first project. This type is characterized by a more explorative approach, and the goal to find problems and patterns. Here, the dataset is at the core of the project and the fixed aspect of the project. In turn, this means swapping the dataset is the start of a new project. When turning to the metaphor of mining for minerals, this type of project would be the exploration of different test pits that promise mineral occurences \cite{dataScienceProjectTypes}. It is not clear if a problem can be solved with the investigation, and problem to solve is not known.
+	The complementary project type is the data-first project. This type is characterized by a more exploratory approach, and the goal to find problems and patterns. Here, the dataset is at the core of the project and the fixed aspect of the project. In turn, this means swapping the dataset is the start of a new project. When turning to the metaphor of mining for minerals, this type of project would be the exploration of different test pits that promise mineral occurrences \cite{dataScienceProjectTypes}. It is not clear if a problem can be solved with the investigation, and problem to solve is not known.
 	
 	\subsection{Systematization of this Project}
 	Usually, the project type is not decided on, but implicitly arises out of environmental parameters. This is also the case in this project. While there was no initial business goal defined, a dataset was chosen and agreed upon. The decision process is detailed in the next section, \ref{data-source}. The dataset being the anchor of the project, this data science project can easily be classified as a Data-First project.
