--- a/Inhalt/04_Inhalt/introduction.tex
+++ b/Inhalt/04_Inhalt/introduction.tex
@@ -17,7 +17,7 @@ Which methods exist for clustering large-scale multilingual corpora? Which combi
 \section{Outline}
 The introductory chapter briefly explains the motivation behind the thesis. Also, the current situation is assessed and research questions are presented. Lastly, it presents the structure of the thesis.
 
-The following chapter about objectives and criteria gives a detailes task description, and established criteria. In the section \ref{research-model} the process model is explained, evaluated and adjusted.
+The following chapter about objectives and criteria gives a detailed task description, and established criteria. In the section \ref{research-model} the process model is explained, evaluated and adjusted.
 
 Chapter 3 gives a glossary of terms. Chapter 3 sheds light on the corporate environment with respect to the aspects of history, organization an technological aspects. 
 
