--- a/Inhalt/04_Inhalt/introduction.tex
+++ b/Inhalt/04_Inhalt/introduction.tex
@@ -1,18 +1,18 @@
 \chapter{Introduction}
 \section{Motivation}
 
-An invoice is a document recording the main information on a sales transaction. Usually, an invoice contains the unit cost, a timestamp, and payment terms. Other information, such as shipping terms, shipping adress, or discounts may also be included.
+More than 4 out of 5 financial departments are "overwhelmed by the high numbers of invoices they are expected to process"  \cite{manualInvoiceProcessing}. Already swamped departments of course struggle with providing information on savings potential. A solution for processing large amounts of invoice data with minimal human interference is desirable. Processing this information should transform unstructured data into a useful format, further the data should be enriched in a way giving insight and provide value for financial advisors. With analysis results of this automated processing, financial advisors can enjoy two improvements. Firstly, they have a factual base for recommendations. Secondly, the financial department is able to focus on tasks which are more value-adding, if an automated solution completes this time-consuming task of an in-depth analysis of spending.
 
-Apart from their use for tax records, tracking the inventory and legal protection, invoices are essential for a company's financial reporting. Invoices are the main source of information for controlling \cite{investopediaInvoices}, as they record the complete history of cash flow \cite{invoicesPurpose}. In general, internal financial reporting aims to provide information about the health of a company, and supply means for improvement. This in-depth analysis of spending is a time-consuming task.
-
-More than 4 out of 5 financial departments are "overwhelmed by the high numbers of invoices they are expected to process"  \cite{manualInvoiceProcessing}. Already swamped departments of course struggle with providing information on savings potential. A solution for processing large amounts of invoice data with minimal human interference is desirable. With analysis results, financial advisors have a factual base for recommendations.
+An invoice is a document recording the main information on a sales transaction. Usually, an invoice contains the unit cost, a timestamp, and payment terms. Other information, such as shipping terms, shipping address, or discounts may also be included. Apart from their use for tax records, tracking the inventory and legal protection, invoices are essential for a company's financial reporting. Invoices are the main source of information for controlling \cite{investopediaInvoices}, as they record the complete history of cash flow \cite{invoicesPurpose}. In general, internal financial reporting aims to provide information about the health of a company, and supply means for improvement. 
 
 \section{Current Situation}
-An essential part of economic counselling is the assessment of spending for different company segments. Spending of a firm usually is written down in invoice documents, which have to be grouped  to analyze cost types.
-The global market is estimated to comprise 550 billion invoices annually, but 90\% are exchanged paper-based \cite{kochEInvoicingJourney}. With modern technology, these paper-based or digital documents can be transformed into a structured or semi-structured format. According to expert estimates, unstructured data makes up for more than 80\% of enterprise data \cite{structuredAndUnstructuredData}. Companies can not utilize unstructured data to its full potential, as this data is not leverageable with tradtitional data analysis tools.
+An essential part of economic counseling is the assessment of spending for different company segments. Spending of a firm usually is written down in invoice documents, which have to be grouped  to analyze cost types.
+The global market is estimated to comprise 550 billion invoices annually, but 90\% are exchanged paper-based \cite{kochEInvoicingJourney}. With modern technology, these paper-based or digital documents can be transformed into a structured or semi-structured format. According to expert estimates, unstructured data makes up for more than 80\% of enterprise data \cite{structuredAndUnstructuredData}. Companies can not utilize unstructured data to its full potential, as this data is not able to be leveraged with traditional data analysis tools.
 
 \section{Research Questions}
-Which methods exist for clustering large-scale multilingual corpora? Which combinations of feature-selection methods and clustering methods return the most valuable information?
+\label{research-q}
+How can information from invoice-like documents be extracted?
+How can extracted information provide insights?
 
 \section{Outline}
 The introductory chapter briefly explains the motivation behind the thesis. Also, the current situation is assessed and research questions are presented. Lastly, it presents the structure of the thesis.
