--- a/Inhalt/04_Inhalt/content_data_understanding.tex
+++ b/Inhalt/04_Inhalt/content_data_understanding.tex
@@ -13,10 +13,10 @@ The insertion of data is concerned with the theoretical utilization of the data 
 Other concerns are missing attributes. The dataset has already undergone a surface-level evaluation, which concludes that all relevant attributes are contained.
 
 \section{Data Description}
-The data is available as a local folder of size 5.12 GB, it contains 152,591 \ac{JSON} files. Each file, between 11 and 540 KB in size, represents one invoice document. 
+The data is available as 152,591 \ac{JSON} files. Each file represents one invoice document. 
 
-Each invoice contains specific header data, the detailed list of the 172 header fields is contained in the appendix \ref{invoice-header}. 
-The items listed in one invoice are line items. The information about line items is contained in 32 features, also detailed in the appendix \ref{invoice-lines}.
+Each invoice contains specific header data, the detailed list of the 172 header fields is contained in the appendix (\ref{invoice-header}). 
+The items listed in one invoice are line items. The information about line items is contained in 32 features, also detailed in the appendix (\ref{invoice-lines}).
 
 All documents follow a specific schema (\ref{code:JSONSchema}). In the beginning, the metadata of the invoice is described, followed by an array of objects (l.7). Each item in the array contains two key value pairs. First, the label of the feature (e.g. "totalAmount"). Second, the value of the feature (e.g. "\$7").
 
@@ -66,14 +66,17 @@ The description of the invoices is related to the feature 'language', which desc
 	\caption{Number of Invoices per Language}
 	\label{fig:languages-bar}
 \end{figure}
-From the chart (\ref{fig:languages-pareto}) it can be inferred, that 80\% of invoices are in the top 16 languages. The slow rise after the top 80 languages indicates, that there are a lot of languages with a small number of invoices. This is also explained with a huge number of possible combinations of more than one language.
-\newpage
-\begin{figure}[!h]
+
+\begin{figure}[h!]
 	\centering
 	\includegraphics[height=6.5cm]{Bilder/languages_pareto.pdf}
 	\caption{Percentage of Invoices by cumulative Number of Languages}
-	\label{fig:languages-bar}
+	\label{fig:languages-pareto}
 \end{figure}
+
+
+From the chart (\ref{fig:languages-pareto}) it can be inferred, that 80\% of invoices are in the top 16 languages. The slow rise after the top 80 languages indicates, that there are a lot of languages with a small number of invoices. This is also explained with a huge number of possible combinations of more than one language.
+
 
 \paragraph{Invoice Item total Amount}
 The invoice item total amount stands for the charge corresponding to one line in an invoice. Without very basic data cleaning, this column was not usable. The values were separated by a variety of different decimal delimiters and contained additional symbols. Also, the variation was initially very high due to some outliers in the magnitudes of $10^{217}$. Therefore, the values were aligned to one common decimal delimiter and stripped of the 1st and 99th percentile. This allows an initial insight into the distribution of the values.
